# learning-spark

./: .gitignore  README.md  conftest.py  count-customer-orders.py  docker-compose.yml  friend_by_age.py  min_max_temperature.py  pyproject.toml  pytest.ini  ratings_counter.py  sparksql.ipynb
notebooks/: count-customer-orders-datafrrame.ipynb  discover-super-heroes.ipynb  find-most-obscure-superheroes.ipynb  friends-by-age-dataframe.ipynb  min-max-temperature-dataframe.ipynb  movie-ratings-dataframe.ipynb  movie-recommendation.ipynb  research.ipynb  sparksql.ipynb  work-count-dataframe.ipynb
scripts/: count-customer-orders.py  friend_by_age.py  min_max_temperature.py  ratings_counter.py
tests/: fixtures.py  test_count_customer_orders.py  test_friend_by_age.py  test_min_max_temperature.py  test_ratings_counter.py
tests/test_data/: test_customer_orders.csv  test_fake_friends.csv  test_fake_ratings.csv  test_temperature.csv
